# thin_client

./: .gitignore  Cargo.toml  README.md  README_python.md  README_rust.md  RELEASING.md  pyproject.toml  pytest.ini  requirements.txt  setup.py
.github/workflows/: publish-py.yml  publish-rust.yml  ruff-format.yml  rustfmt.yml  test-integration-docker.yml  test-python-unittests.yml
examples/: echo_ping.py  echo_ping.rs  fetch_pki_doc.py  world_map.py
katzenpost_reticulum/: README.md
katzenpost_reticulum/pkimirror/: __init__.py  __main__.py  bridge.py  cache.py  client.py  config.py  dirauth_config.py  errors.py  fetch.py  handlers.py  service.py  verifier.py
katzenpost_thinclient/: __init__.py  core.py  legacy.py  pigeonhole.py  thinclient_data.py
katzenpost_thinclient/transport/: __init__.py  tcp.py  unix.py
src/: core.rs  error.rs  helpers.rs  lib.rs  pigeonhole.rs
src/chat/: mod.rs
src/doodle/: mod.rs
src/group/: channel.rs  event_channel.rs  messages.rs  mod.rs
src/persistent/: README.md  channel.rs  db.rs  error.rs  mod.rs  models.rs
src/pigeonhole_db/: channel.rs  error.rs  mod.rs  models.rs
src/tally/: mod.rs
src/transport/: mod.rs  tcp.rs  unix.rs
testdata/: thinclient.toml
tests/: channel_api_test.rs  conftest.py  directory_authorities_test.rs  doodle_test.rs  group_channel_test.rs  high_level_api_test.rs  smoke_pigeonhole_cp.rs  tally_test.rs  test_channel_api.py  test_channel_api_extended.py  test_channels.py  test_core.py  test_new_methods.py  test_new_pigeonhole_api.py  test_pkimirror_cache.py  test_pkimirror_client_cache.py  test_pkimirror_config.py  test_pkimirror_dirauth_config.py  test_pkimirror_envelope.py  test_pkimirror_fetch_cli.py  test_pkimirror_handlers.py  test_pkimirror_service_helpers.py  test_pkimirror_verifier.py  test_session_resume.py  test_thinclient.py
tests/integration/: test_pkimirror_e2e.py
thinclient/: __init__.py  _metadata.py
