[package]
name = "thin_client"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
libc = "0.2.152"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_cbor = "0.11"
blake2 = "0.10"
log = "0.4"
env_logger = "0.11"
hex = "0.4"
tokio = { version = "1", features = ["full"] }
generic-array = "0.14.0"
typenum = "1.16"  # Explicitly add typenum, which provides `U32`