[project]
name = "katzenpost_thinclient"
version = "0.0.16"
dynamic = ["dependencies"]
authors = [
  { name="David Stainton", email="dstainton415@gmail.com" },
]
description = "A thinclient for the Katzenpost client daemon"
readme = "README_python.md"
requires-python = ">=3.8"
classifiers = [
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Operating System :: OS Independent",
    "Topic :: Security :: Cryptography",
]

[project.urls]
Homepage = "https://katzenpost.network/"
Issues = "https://github.com/katzenpost/thin_client/issues"

[build-system]
requires = ["hatchling", "hatch-requirements-txt"]
build-backend = "hatchling.build"

[tool.hatch.metadata.hooks.requirements_txt]
files = ["requirements.txt"]

[tool.hatch.build]
exclude = ["venv_test"]

[tool.hatch.build.targets.wheel]
packages = ["katzenpost_thinclient", "katzenpost_reticulum"]

[project.scripts]
pkimirror = "katzenpost_reticulum.pkimirror.__main__:main"
pkimirror-fetch = "katzenpost_reticulum.pkimirror.fetch:main"

[project.optional-dependencies]
dev = [
    "mypy",
    "types-toml"
]
test = [
    "pytest",
    "pytest-cov",
    "pytest-asyncio",
    "pytest-timeout",
    "pytest-xdist",
]
reticulum = [
    "rns>=0.9",
    "tomli; python_version<'3.11'",
    # pkimirror verifies cert.Certificate signatures against the
    # configured dirauth identities; 0.0.2 added the
    # hpqc.sign.hybrid.FalconPadded512Ed25519 verifier required here.
    "hpqc>=0.0.2",
]

